--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,11 +1,10 @@
 $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/bootstrap/";
 @import "variables.scss";
 @import "mixins.scss";
-
 // bower:scss
 @import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
 // endbower
-
+@import "bootswatch.scss";
 @import "creative.scss";
 
 .browsehappy {
