--- a/app/views/main.html
+++ b/app/views/main.html
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand page-scroll" href="#page-top">Start Bootstrap</a>
+      <a class="navbar-brand page-scroll" href="#page-top">{ desenvolvedor.expert(vc); }</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -36,9 +36,14 @@
 <header>
   <div class="header-content">
     <div class="header-content-inner">
-      <h1>Your Favorite Source of Free Bootstrap Themes</h1>
+      <h1>> hello, world!_</h1>
       <hr>
-      <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
+      <h3>Welcome ~/home, desenvolvedor...</h3>
+      <blockquote class="text-left">
+        <p>Estamos descobrindo maneiras melhores de desenvolver software, fazendo-o nós mesmos e ajudando outros a fazerem o mesmo.</p>
+        <footer class="text-right">Manifesto para <cite title="agilemanifesto.org">Desenvolvimento Ágil de Software</cite></footer>
+      </blockquote>
+      <p class="lead">Informe o seu email agora mesmo para receber algumas sacadas que eu gostaria que algém tivesse me dito quando eu comecei a programar.</p>
       <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
     </div>
   </div>
