--- a/app/styles/creative.scss
+++ b/app/styles/creative.scss
@@ -189,7 +189,7 @@ header {
       -webkit-transform: translateY(-50%);
       -ms-transform: translateY(-50%);
       transform: translateY(-50%);
-      padding: 0 50px;
+      padding: 50px;
       .header-content-inner {
         max-width: 1000px;
         margin-left: auto;
