--- a/app/views/main.html
+++ b/app/views/main.html
@@ -15,16 +15,16 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li>
-          <a class="page-scroll" href="#about">About</a>
+          <a class="page-scroll" href="#about">#1 Sacada</a>
         </li>
         <li>
-          <a class="page-scroll" href="#services">Services</a>
+          <a class="page-scroll" href="#services">O que tem aqui?</a>
         </li>
         <li>
           <a class="page-scroll" href="#portfolio">Portfolio</a>
         </li>
         <li>
-          <a class="page-scroll" href="#contact">Contact</a>
+          <a class="page-scroll" href="#contact">Contato</a>
         </li>
       </ul>
     </div>
@@ -36,15 +36,14 @@
 <header>
   <div class="header-content">
     <div class="header-content-inner">
-      <h1>> hello, world!_</h1>
+      <h1>> ~/welcome/home_</h1>
       <hr>
-      <h3>Welcome ~/home, desenvolvedor...</h3>
       <blockquote class="text-left">
         <p>Estamos descobrindo maneiras melhores de desenvolver software, fazendo-o nós mesmos e ajudando outros a fazerem o mesmo.</p>
         <footer class="text-right">Manifesto para <cite title="agilemanifesto.org">Desenvolvimento Ágil de Software</cite></footer>
       </blockquote>
-      <p class="lead">Informe o seu email agora mesmo para receber algumas sacadas que eu gostaria que algém tivesse me dito quando eu comecei a programar.</p>
-      <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+      <p class="lead">Tudo que eu gostaria que algém tivesse me dito quando eu comecei a programar.</p>
+      <a href="#about" class="btn btn-primary btn-xl page-scroll">Saiba Agora</a>
     </div>
   </div>
 </header>
@@ -53,10 +52,11 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 text-center">
-        <h2 class="section-heading">We've got what you need!</h2>
+        <h2 class="section-heading">> hello, world!_</h2>
         <hr class="light">
-        <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
-        <a href="#services" class="page-scroll btn btn-default btn-xl">Get Started!</a>
+        <p class="text-faded">A primeira sacada é que aqui tem tudo que você precisa para colocar seu novo website on-line agora mesmo!
+          Todos os templates e temas são de código aberto, gratuito para download e fácil de usar. Sem restrições!</p>
+        <a href="#services" class="page-scroll btn btn-default btn-xl">Comece Agora!</a>
       </div>
     </div>
   </div>
@@ -66,7 +66,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2 class="section-heading">At Your Service</h2>
+        <h2 class="section-heading">O que tem aqui?</h2>
         <hr class="primary">
       </div>
     </div>
@@ -76,29 +76,29 @@
       <div class="col-lg-3 col-md-6 text-center">
         <div class="service-box">
           <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
-          <h3>Sturdy Templates</h3>
-          <p class="text-muted">Our templates are updated regularly so they don't break.</p>
+          <h3>Template</h3>
+          <p class="text-muted">Esse template é atualizado regularmente para não quebrar.</p>
         </div>
       </div>
       <div class="col-lg-3 col-md-6 text-center">
         <div class="service-box">
           <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
-          <h3>Ready to Ship</h3>
-          <p class="text-muted">You can use this theme as is, or you can make changes!</p>
+          <h3>Pronto para Entregar</h3>
+          <p class="text-muted">Você pode usar esse website como está, ou fazer as suas mudanças!</p>
         </div>
       </div>
       <div class="col-lg-3 col-md-6 text-center">
         <div class="service-box">
           <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
-          <h3>Up to Date</h3>
-          <p class="text-muted">We update dependencies to keep things fresh.</p>
+          <h3>Atualizado</h3>
+          <p class="text-muted">Atualizado para manter tudo em dia.</p>
         </div>
       </div>
       <div class="col-lg-3 col-md-6 text-center">
         <div class="service-box">
           <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
-          <h3>Made with Love</h3>
-          <p class="text-muted">You have to make your websites with love these days!</p>
+          <h3>Feito com Amor</h3>
+          <p class="text-muted">Você deve colocar amor em tudo que faz hoje em dia!</p>
         </div>
       </div>
     </div>
@@ -205,8 +205,8 @@
 <aside class="bg-dark">
   <div class="container text-center">
     <div class="call-to-action">
-      <h2>Free Download at Start Bootstrap!</h2>
-      <a href="#" class="btn btn-default btn-xl wow tada">Download Now!</a>
+      <h2>Download Gratuito basta se inscrever!</h2>
+      <a href="#" class="btn btn-default btn-xl wow tada">Baixe Agora!</a>
     </div>
   </div>
 </aside>
