--- a/app/views/main.html
+++ b/app/views/main.html
@@ -43,7 +43,7 @@
         <footer class="text-right">Manifesto para <cite title="agilemanifesto.org">Desenvolvimento Ágil de Software</cite></footer>
       </blockquote>
       <p class="lead">Tudo que eu gostaria que algém tivesse me dito quando eu comecei a programar.</p>
-      <a href="#about" class="btn btn-primary btn-xl page-scroll">Saiba Agora</a>
+      <a ng-click="main.login()" class="btn btn-primary btn-xl">Saiba Agora &nbsp;&nbsp;&nbsp;<span class="fa fa-mouse-pointer"></span></a>
     </div>
   </div>
 </header>
@@ -56,7 +56,7 @@
         <hr class="light">
         <p class="text-faded">A primeira sacada é que aqui tem tudo que você precisa para colocar seu novo website on-line agora mesmo!
           Todos os templates e temas são de código aberto, gratuito para download e fácil de usar. Sem restrições!</p>
-        <a href="#services" class="page-scroll btn btn-default btn-xl">Comece Agora!</a>
+        <a ng-click="main.login()" class="btn btn-default btn-xl">Comece Agora!</a>
       </div>
     </div>
   </div>
@@ -206,7 +206,7 @@
   <div class="container text-center">
     <div class="call-to-action">
       <h2>Download Gratuito basta se inscrever!</h2>
-      <a href="#" class="btn btn-default btn-xl wow tada">Baixe Agora!</a>
+      <a ng-click="main.login()" class="btn btn-default btn-xl wow tada">Baixe Agora!</a>
     </div>
   </div>
 </aside>
